@@ -5,3 +5,7 @@ bag.count_unique: 4
 bag.member(4): yes
 bag.member(5): no
 unsorted_solutions(bag.member/3): [{4, [1, 1, 1, 2, 3, 3]}, {3, [1, 1, 1, 2, 3, 4]}, {3, [1, 1, 1, 2, 3, 4]}, {2, [1, 1, 1, 3, 3, 4]}, {1, [1, 1, 2, 3, 3, 4]}, {1, [1, 1, 2, 3, 3, 4]}, {1, [1, 1, 2, 3, 3, 4]}]
+bag.insert_duplicates(5, "foo"): ["foo", "foo", "foo", "foo", "foo"]
+bag.insert_duplicates(0, "foo"): []
+bag.insert_duplicates(-1, "foo"): "fail"
+bag.insert_duplicates(4, "foo"): ["foo", "foo", "foo", "foo", "foo"]
