@@ -39,11 +39,28 @@ main(!IO) :-
         O = {M, []++to_list(Rest)}
     ), Sols),
     dump("unsorted_solutions(bag.member/3): ", Sols, !IO),
+
+    test_insert_duplicates(5, bag.init, !IO),
+    test_insert_duplicates(0, bag.init, !IO),
+    test_insert_duplicates(-1, bag.init, !IO),
+    test_insert_duplicates(4, bag.from_list(["foo"]), !IO),
+
     true.
+
+:- pred test_insert_duplicates(int::in, bag(string)::in, io::di, io::uo)
+    is det.
+
+test_insert_duplicates(N, Bag0, !IO) :-
+    Prefix = "bag.insert_duplicates(" ++ int_to_string(N) ++ ", \"foo\"): ",
+    ( if bag.insert_duplicates(N, "foo", Bag0, Bag) then
+        bag.to_list(Bag, List),
+        dump(Prefix, List, !IO)
+    else
+        dump(Prefix, "fail", !IO)
+    ).
 
 :- pred dump(string::in, T::in, io::di, io::uo) is det.
 
 dump(Msg, T, !IO) :-
-    io__write_string(Msg, !IO),
-    io__write(T, !IO),
-    io__nl(!IO).
+    io.write_string(Msg, !IO),
+    io.write_line(T, !IO).
